@@ -24,9 +24,9 @@ __END__
       license_key => 'abcdef123456',
   );
 
-  my $omni = $client->omni( ip => '24.24.24.24' );
+  my $insights = $client->insights( ip => '24.24.24.24' );
 
-  my $country_rec = $omni->country();
+  my $country_rec = $insights->country();
   say $country_rec->name();
 
 =head1 DESCRIPTION
