@@ -44,9 +44,9 @@ __END__
       license_key => 'abcdef123456',
   );
 
-  my $omni = $client->omni( ip => '24.24.24.24' );
+  my $insights = $client->insights( ip => '24.24.24.24' );
 
-  my $subdivision_rec = $omni->subdivision();
+  my $subdivision_rec = $insights->subdivision();
   say $subdivision_rec->name();
 
 =head1 DESCRIPTION
