@@ -77,9 +77,9 @@ __END__
       license_key => 'abcdef123456',
   );
 
-  my $omni = $client->omni( ip => '24.24.24.24' );
+  my $insights = $client->insights( ip => '24.24.24.24' );
 
-  my $traits_rec = $omni->country();
+  my $traits_rec = $insights->country();
   say $traits_rec->name();
 
 =head1 DESCRIPTION
