@@ -19,6 +19,8 @@ my $locales = [ 'en', 'de', ];
     ok( $reader, 'got reader for test database' );
 
     for my $model ( 'country', 'city', 'city_isp_org', 'insights', 'omni', ) {
+        no warnings 'deprecated';
+
         like(
             exception { $reader->$model() },
             qr/Required param/,
