@@ -1,8 +1,12 @@
 {{$NEXT}}
 
+- The city_isp_org() and omni() methods now emit deprecation warnings.
+
+
 0.040005 2014-07-22
 
 - No changes. Re-release to fix PAUSE permission issues.
+
 
 0.040004 2014-07-22
 
